# catplanet-cogs

./: .editorconfig  LICENCE  README.md  pyproject.toml
misc/: __init__.py  info.json  misc.py
