[tool.poetry]
name = "catplanet-cogs"
version = "0.1.0"
description = ""
authors = ["Riggle"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
discord = "^1.7.3"
Red-DiscordBot = "^3.4.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
